--- a/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
+++ b/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
@@ -169,6 +169,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\ISetting.cs" />
+    <Compile Include="Domain\Settings\Setting.cs" />
     <Compile Include="NetCommunitySolutionConsts.cs" />
     <Compile Include="NetCommunitySolutionCoreModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -177,9 +179,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Domain\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
