--- a/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
+++ b/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
@@ -175,9 +175,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ISettingService.cs" />
+    <Compile Include="Common\SettingExtension.cs" />
+    <Compile Include="Common\SettingService.cs" />
     <Compile Include="NetCommunitySolutionApplicationModule.cs" />
     <Compile Include="NetCommunitySolutionAppServiceBase.cs" />
+    <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\EncryptionService.cs" />
+    <Compile Include="Security\IEncryptionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
