--- a/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
+++ b/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
@@ -169,7 +169,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonExtensions.cs" />
+    <Compile Include="CommonHelper.cs" />
+    <Compile Include="ComponentModel\GenericDictionaryTypeConverter.cs" />
+    <Compile Include="ComponentModel\GenericListTypeConverter.cs" />
+    <Compile Include="ComponentModel\WriteLockDisposable.cs" />
     <Compile Include="Domain\ISetting.cs" />
+    <Compile Include="Domain\Settings\CommonSetting.cs" />
+    <Compile Include="Domain\Settings\RegistrationMode.cs" />
     <Compile Include="Domain\Settings\Setting.cs" />
     <Compile Include="NetCommunitySolutionConsts.cs" />
     <Compile Include="NetCommunitySolutionCoreModule.cs" />
