--- a/NetCommunitySolution.Web/Web.config
+++ b/NetCommunitySolution.Web/Web.config
@@ -21,7 +21,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Server=localhost; Database=NetCommunitySolution; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=47.93.233.67; Database=NetCommunitySolution; Trusted_Connection=False;user id=sa;password=jiepang365HB" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -78,7 +78,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="AutoMapper" publicKeyToken="be96cd2c38ef1005" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.2.1.0" newVersion="6.2.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.2.2.0" newVersion="6.2.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -363,6 +363,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.2.0" newVersion="2.2.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.2" newVersion="4.1.1.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
