--- a/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
+++ b/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
@@ -219,6 +219,11 @@
     <Compile Include="Authentication\Dto\LoginResult.cs" />
     <Compile Include="Authentication\Dto\LoginResults.cs" />
     <Compile Include="Authentication\LoginManager.cs" />
+    <Compile Include="Catalog\CategoryExtensions.cs" />
+    <Compile Include="Catalog\CategoryService.cs" />
+    <Compile Include="Catalog\ContentLabelService.cs" />
+    <Compile Include="Catalog\ICategoryService.cs" />
+    <Compile Include="Catalog\IContentLabelService.cs" />
     <Compile Include="Common\ISettingService.cs" />
     <Compile Include="Common\SettingExtension.cs" />
     <Compile Include="Common\SettingService.cs" />
