--- a/NetCommunitySolution.Web/NetCommunitySolution.Web.csproj
+++ b/NetCommunitySolution.Web/NetCommunitySolution.Web.csproj
@@ -398,6 +398,21 @@
     <Content Include="Abp\Framework\styles\abp.mixings.css" />
     <Content Include="Abp\Framework\styles\abp.mixings.min.css" />
     <Content Include="Abp\Framework\styles\utils\ie10fix.css" />
+    <Content Include="Areas\Operate\Views\Catalog\Create.cshtml" />
+    <Content Include="Areas\Operate\Views\Catalog\Edit.cshtml" />
+    <Content Include="Areas\Operate\Views\Catalog\Index.cshtml" />
+    <Content Include="Areas\Operate\Views\Catalog\_CreateOrUpdate.cshtml" />
+    <Content Include="Areas\Operate\Views\ContentLabel\Create.cshtml" />
+    <Content Include="Areas\Operate\Views\ContentLabel\Edit.cshtml" />
+    <Content Include="Areas\Operate\Views\ContentLabel\Index.cshtml" />
+    <Content Include="Areas\Operate\Views\ContentLabel\_CreateOrUpdate.cshtml" />
+    <Content Include="Areas\Operate\Views\Setting\Common.cshtml" />
+    <Content Include="Areas\Operate\Views\Shared\EditorTemplates\MultiSelect.cshtml" />
+    <Content Include="Areas\Operate\Views\Shared\EditorTemplates\SingleSelect.cshtml" />
+    <Content Include="Areas\Operate\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Operate\Views\Shared\_Sidebar.cshtml" />
+    <Content Include="Areas\Operate\Views\web.config" />
+    <Content Include="Areas\Operate\Views\_ViewStart.cshtml" />
     <Content Include="Content\admin.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -592,24 +607,9 @@
     <Content Include="Abp\Framework\styles\abp.mixings.css.map" />
     <Content Include="Abp\Framework\styles\abp.less" />
     <Content Include="Abp\Framework\styles\abp.css.map" />
-    <Content Include="Areas\Operate\Views\web.config" />
-    <Content Include="Areas\Operate\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Operate\Views\Shared\_Layout.cshtml" />
-    <Content Include="Areas\Operate\Views\Setting\Common.cshtml" />
     <Content Include="layui\font\iconfont.eot" />
     <Content Include="layui\font\iconfont.ttf" />
     <Content Include="layui\font\iconfont.woff" />
-    <Content Include="Areas\Operate\Views\Shared\_Sidebar.cshtml" />
-    <Content Include="Areas\Operate\Views\Catalog\Index.cshtml" />
-    <Content Include="Areas\Operate\Views\ContentLabel\Index.cshtml" />
-    <Content Include="Areas\Operate\Views\Shared\EditorTemplates\MultiSelect.cshtml" />
-    <Content Include="Areas\Operate\Views\Shared\EditorTemplates\SingleSelect.cshtml" />
-    <Content Include="Areas\Operate\Views\ContentLabel\Create.cshtml" />
-    <Content Include="Areas\Operate\Views\ContentLabel\_CreateOrUpdate.cshtml" />
-    <Content Include="Areas\Operate\Views\ContentLabel\Edit.cshtml" />
-    <Content Include="Areas\Operate\Views\Catalog\Edit.cshtml" />
-    <Content Include="Areas\Operate\Views\Catalog\Create.cshtml" />
-    <Content Include="Areas\Operate\Views\Catalog\_CreateOrUpdate.cshtml" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
@@ -655,16 +655,17 @@
     <Compile Include="App_Start\NetCommunitySolutionWebModule.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.cs" />
-    <Compile Include="Areas\Operate\Controllers\ContentLabelController.cs" />
-    <Compile Include="Areas\Operate\Models\Catalog\CategoryListModel.cs" />
     <Compile Include="Areas\Operate\Controllers\AdminBaseController.cs" />
     <Compile Include="Areas\Operate\Controllers\CatalogController.cs" />
+    <Compile Include="Areas\Operate\Controllers\ContentLabelController.cs" />
     <Compile Include="Areas\Operate\Controllers\SettingController.cs" />
+    <Compile Include="Areas\Operate\Models\Catalog\CategoryListModel.cs" />
     <Compile Include="Areas\Operate\Models\Catalog\CategoryModel.cs" />
     <Compile Include="Areas\Operate\Models\Catalog\ContentLabelModel.cs" />
     <Compile Include="Areas\Operate\OperateAreaRegistration.cs" />
     <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\CatalogController.cs" />
+    <Compile Include="Controllers\ContentLabelController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Framework\Controllers\ParameterBasedOnFormNameAttribute.cs" />
@@ -675,6 +676,7 @@
     <Compile Include="Framework\Layui\DataSourceResult.cs" />
     <Compile Include="Framework\Mvc\NullJsonResult.cs" />
     <Compile Include="Models\Catalog\CategoryModel.cs" />
+    <Compile Include="Models\Catalog\ContentLabelModel.cs" />
     <Compile Include="Models\Customers\LoginModel.cs" />
     <Compile Include="Models\Customers\RegisterModel.cs" />
     <Compile Include="Models\Customers\RegisterResultModel.cs" />
@@ -705,6 +707,8 @@
     <Content Include="Views\Shared\_HomeLayout.cshtml" />
     <Content Include="Views\Customer\CustomerStatus.cshtml" />
     <Content Include="Views\Catalog\TopMenu.cshtml" />
+    <Content Include="Views\ContentLabel\HotLabel.cshtml" />
+    <Content Include="Views\Customer\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
