--- a/NetCommunitySolution.Web/Views/web.config
+++ b/NetCommunitySolution.Web/Views/web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="NetCommunitySolution.Web" />
+        <add namespace="NetCommunitySolution.Web.Framework.Html" />
+        <add namespace="Abp.Web.Mvc.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
