--- a/NetCommunitySolution.Web/Web.config
+++ b/NetCommunitySolution.Web/Web.config
@@ -21,7 +21,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Server=47.93.233.67; Database=NetCommunitySolution; Trusted_Connection=False;user id=sa;password=jiepang365HB" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=loaclhost; Database=NetCommunitySolution; Trusted_Connection=False;user id=sa;password=123qwe" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
