--- a/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
+++ b/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
@@ -182,6 +182,8 @@
     <Compile Include="ComponentModel\WriteLockDisposable.cs" />
     <Compile Include="Domain\Catalog\Category.cs" />
     <Compile Include="Domain\Catalog\ContentLabel.cs" />
+    <Compile Include="Domain\Catalog\Post.cs" />
+    <Compile Include="Domain\Catalog\PostLabel.cs" />
     <Compile Include="Domain\Customers\Customer.cs" />
     <Compile Include="Domain\Customers\CustomerRole.cs" />
     <Compile Include="Domain\ISetting.cs" />
