--- a/NetCommunitySolution.Web/packages.config
+++ b/NetCommunitySolution.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Captcha" version="4.2.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Castle.LoggingFacility" version="4.1.0" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
