--- a/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
+++ b/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
@@ -186,13 +186,19 @@
     <Compile Include="Domain\Catalog\PostComment.cs" />
     <Compile Include="Domain\Catalog\PostLabel.cs" />
     <Compile Include="Domain\Customers\Customer.cs" />
+    <Compile Include="Domain\Customers\CustomerAttribute.cs" />
+    <Compile Include="Domain\Customers\CustomerAttributeNames.cs" />
+    <Compile Include="Domain\Customers\CustomerFollow.cs" />
     <Compile Include="Domain\Customers\CustomerRole.cs" />
     <Compile Include="Domain\ISetting.cs" />
     <Compile Include="Domain\Settings\CommonSetting.cs" />
     <Compile Include="Domain\Settings\CustomerSetting.cs" />
+    <Compile Include="Domain\Settings\MediaMode.cs" />
+    <Compile Include="Domain\Settings\MediaSetting.cs" />
     <Compile Include="Domain\Settings\PostSetting.cs" />
     <Compile Include="Domain\Settings\RegistrationMode.cs" />
     <Compile Include="Domain\Settings\Setting.cs" />
+    <Compile Include="Medias\ThumbnailHelper.cs" />
     <Compile Include="NetCommunitySolutionConsts.cs" />
     <Compile Include="NetCommunitySolutionCoreModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
