--- a/NetCommunitySolution.EntityFramework/NetCommunitySolution.EntityFramework.csproj
+++ b/NetCommunitySolution.EntityFramework/NetCommunitySolution.EntityFramework.csproj
@@ -221,6 +221,18 @@
     <Compile Include="Migrations\201712151227223_Create_Post_Comment_Scripts.Designer.cs">
       <DependentUpon>201712151227223_Create_Post_Comment_Scripts.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712160231452_Create_CustomerAttribute_Scripts.cs" />
+    <Compile Include="Migrations\201712160231452_Create_CustomerAttribute_Scripts.Designer.cs">
+      <DependentUpon>201712160231452_Create_CustomerAttribute_Scripts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712161541168_Update_Post_And_Comment_Scripts.cs" />
+    <Compile Include="Migrations\201712161541168_Update_Post_And_Comment_Scripts.Designer.cs">
+      <DependentUpon>201712161541168_Update_Post_And_Comment_Scripts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712170315034_Create_Follow_Scripts.cs" />
+    <Compile Include="Migrations\201712170315034_Create_Follow_Scripts.Designer.cs">
+      <DependentUpon>201712170315034_Create_Follow_Scripts.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NetCommunitySolutionDataModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -259,6 +271,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712151227223_Create_Post_Comment_Scripts.resx">
       <DependentUpon>201712151227223_Create_Post_Comment_Scripts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712160231452_Create_CustomerAttribute_Scripts.resx">
+      <DependentUpon>201712160231452_Create_CustomerAttribute_Scripts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712161541168_Update_Post_And_Comment_Scripts.resx">
+      <DependentUpon>201712161541168_Update_Post_And_Comment_Scripts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712170315034_Create_Follow_Scripts.resx">
+      <DependentUpon>201712170315034_Create_Follow_Scripts.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
