--- a/NetCommunitySolution.Application/packages.config
+++ b/NetCommunitySolution.Application/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Abp" version="3.2.5" targetFramework="net461" />
   <package id="Abp.AutoMapper" version="3.2.5" targetFramework="net461" />
+  <package id="Aliyun.OSS.SDK" version="2.6.0" targetFramework="net461" />
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Castle.LoggingFacility" version="4.1.0" targetFramework="net461" />
