1.增加了用户级别模块 2.完善了后台用户模块 3.完善了后台admin Layou的布局 4.修复了前后台跨区域调整的问题

--- a/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
+++ b/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
@@ -240,9 +240,11 @@
     <Compile Include="Customers\CustomerAttributeExtensions.cs" />
     <Compile Include="Customers\CustomerAttributeService.cs" />
     <Compile Include="Customers\CustomerFollowService.cs" />
+    <Compile Include="Customers\CustomerLevelService.cs" />
     <Compile Include="Customers\CustomerService.cs" />
     <Compile Include="Customers\ICustomerAttributeService.cs" />
     <Compile Include="Customers\ICustomerFollowService.cs" />
+    <Compile Include="Customers\ICustomerLevelService.cs" />
     <Compile Include="Customers\ICustomerService.cs" />
     <Compile Include="Media\IOssService.cs" />
     <Compile Include="Media\OssService.cs" />
