--- a/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
+++ b/NetCommunitySolution.Application/NetCommunitySolution.Application.csproj
@@ -252,7 +252,9 @@
     <Compile Include="NetCommunitySolutionAppServiceBase.cs" />
     <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\CaptchaService.cs" />
     <Compile Include="Security\EncryptionService.cs" />
+    <Compile Include="Security\ICaptchaService.cs" />
     <Compile Include="Security\IEncryptionService.cs" />
   </ItemGroup>
   <ItemGroup>
