--- a/NetCommunitySolution.Web/NetCommunitySolution.Web.csproj
+++ b/NetCommunitySolution.Web/NetCommunitySolution.Web.csproj
@@ -75,12 +75,6 @@
     <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="BotDetect, Version=4.2.0.0, Culture=neutral, PublicKeyToken=74616036388b765f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Captcha.4.2.0\lib\net46\BotDetect.dll</HintPath>
-    </Reference>
-    <Reference Include="BotDetect.Web.Mvc, Version=4.2.0.0, Culture=neutral, PublicKeyToken=74616036388b765f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Captcha.4.2.0\lib\net46\BotDetect.Web.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
@@ -627,6 +621,7 @@
     <Content Include="Areas\Operate\Views\CustomerLevel\_CreateOrUpdate.cshtml" />
     <Content Include="Areas\Operate\Views\Customer\CustomerHeader.cshtml" />
     <Content Include="Areas\Operate\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Operate\Views\Post\Index.cshtml" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
@@ -678,6 +673,7 @@
     <Compile Include="Areas\Operate\Controllers\CustomerController.cs" />
     <Compile Include="Areas\Operate\Controllers\CustomerLevelController.cs" />
     <Compile Include="Areas\Operate\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Operate\Controllers\PostController.cs" />
     <Compile Include="Areas\Operate\Controllers\SettingController.cs" />
     <Compile Include="Areas\Operate\Models\Catalog\CategoryListModel.cs" />
     <Compile Include="Areas\Operate\Models\Catalog\CategoryModel.cs" />
@@ -687,6 +683,7 @@
     <Compile Include="Areas\Operate\OperateAreaRegistration.cs" />
     <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\CatalogController.cs" />
+    <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\ContentLabelController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -699,6 +696,7 @@
     <Compile Include="Framework\Layui\DataSourceRequest.cs" />
     <Compile Include="Framework\Layui\DataSourceResult.cs" />
     <Compile Include="Framework\Mvc\NullJsonResult.cs" />
+    <Compile Include="Framework\UI\CaptchaAttribute.cs" />
     <Compile Include="Models\Catalog\CategoryModel.cs" />
     <Compile Include="Models\Catalog\ContentLabelModel.cs" />
     <Compile Include="Models\Catalog\CustomerPostCommentModel.cs" />
@@ -759,6 +757,7 @@
     <Content Include="Views\Post\Comment.cshtml" />
     <Content Include="Views\Shared\_PostBox.cshtml" />
     <Content Include="Views\Post\PostCatalog.cshtml" />
+    <Content Include="Views\Post\MyPost.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -786,7 +785,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Framework\UI\" />
+    <Folder Include="Views\Common\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
