--- a/NetCommunitySolution.Web/NetCommunitySolution.Web.csproj
+++ b/NetCommunitySolution.Web/NetCommunitySolution.Web.csproj
@@ -622,6 +622,7 @@
     <Content Include="Areas\Operate\Views\Customer\CustomerHeader.cshtml" />
     <Content Include="Areas\Operate\Views\Home\Index.cshtml" />
     <Content Include="Areas\Operate\Views\Post\Index.cshtml" />
+    <Content Include="Areas\Operate\Views\Setting\RewardSetting.cshtml" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
