--- a/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
+++ b/NetCommunitySolution.Core/NetCommunitySolution.Core.csproj
@@ -174,7 +174,6 @@
   <ItemGroup>
     <Compile Include="CacheExtensions.cs" />
     <Compile Include="CacheNames\SettingNames.cs" />
-    <Compile Include="CacheNames\ModelCacheEventConsumer.cs" />
     <Compile Include="CommonExtensions.cs" />
     <Compile Include="CommonHelper.cs" />
     <Compile Include="ComponentModel\GenericDictionaryTypeConverter.cs" />
@@ -191,6 +190,8 @@
     <Compile Include="Domain\Customers\CustomerAttributeNames.cs" />
     <Compile Include="Domain\Customers\CustomerFollow.cs" />
     <Compile Include="Domain\Customers\CustomerRole.cs" />
+    <Compile Include="Domain\Customers\RewardPointMode.cs" />
+    <Compile Include="Domain\Customers\RewardPointsHistory.cs" />
     <Compile Include="Domain\ISetting.cs" />
     <Compile Include="Domain\Settings\CommonSetting.cs" />
     <Compile Include="Domain\Settings\CustomerSetting.cs" />
